<resources>
    <string name="app_name">GoogleImageSearch</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_progress">Loading…</string>
    <string name="action_share">Share</string>

    <string name="title_activity_search">Google Image Search</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Title</string>

    <string name="title_activity_image_display">Google Image Search</string>
    <string name="image_result_label">Image Result</string>

    <string name="image_size_label">Image Size</string>
    <string name="color_filter_label">Color Filter</string>
    <string name="image_type_label">Image Type</string>
    <string name="enter_site_filter_label">Enter site to search</string>
    <string name="site_filter_label">Site Filter</string>
    <string name="save_button_label">Save</string>
    <string name="cancel_button_label">CANCEL</string>

    <string-array name="image_size_array">
        <item>Any</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra-Large</item>
    </string-array>

    <string-array name="color_filter_array">
        <item>Any</item>
        <item>Black</item>
        <item>Gray</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>

    <string-array name="image_type_array">
        <item>Any</item>
        <item>Face</item>
        <item>Photo</item>
        <item>ClipArt</item>
        <item>LineArt</item>
    </string-array>

    <!-- TouchImageView -->
    <string name="single_touchimageview">Single TouchImageView</string>
    <string name="mirror_touchimageview">Mirroring Example</string>
    <string name="viewpager_example">ViewPager Example</string>
    <string name="switch_image_example">Switch Image Example</string>
    <string name="switch_scaletype_example">Switch ScaleType Example</string>

    <string name="get_scroll_position">getScrollPosition():</string>
    <string name="get_zoomed_rect">getZoomedRect():</string>
    <string name="get_current_zoom">getCurrentZoom():</string>
    <string name="mirroring_text">All touch gestures applied to one TouchImageView will be mirrored on the other.</string>
    <string name="swipe_viewpager">Swipe left or right to test ViewPager.</string>
    <string name="switch_image_text">Click TouchImageView to cycle through image resources. Note that the zoom state is maintained.</string>
    <string name="switch_scaletype_text">Click TouchImageView to cycle through supported ScaleTypes.</string>

</resources>
