<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchActivity">

    <item
        android:id="@+id/action_progress_search"
        android:orderInCategory="1"
        android:title="@string/action_progress"
        android:visible="false"
        app:actionLayout="@layout/action_progress_bar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="2"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="always" />

</menu>
